--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -178,17 +178,17 @@
                 <!-- Profile -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user" class="profile-pic" /></a>
+                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img [src]="usuario.img | imagen" alt="user" class="profile-pic" /></a>
                     <div class="dropdown-menu dropdown-menu-right animated flipInY">
                         <ul class="dropdown-user">
                             <li>
                                 <div class="dw-user-box">
                                     <div class="u-img">
-                                        <img src="assets/images/users/1.jpg" alt="user" />
+                                        <img [src]="usuario.img | imagen" alt="user" />
                                     </div>
                                     <div class="u-text">
-                                        <h4>Steave Jobs</h4>
-                                        <p class="text-muted">varun@gmail.com</p>
+                                        <h4>{{ usuario.nombre }}</h4>
+                                        <p class="text-muted">{{ usuario.email }}</p>
                                         <a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a
                     >
                   </div>
@@ -210,14 +210,15 @@
                             </li>
                             <li role="separator" class="divider"></li>
                             <li>
-                                <a href="#"><i class="fa fa-power-off"></i> Logout</a>
-                            </li>
-                        </ul>
-                        </div>
-                </li>
+                                <a (click)="_usuarioService.logout()" style="cursor: pointer"><i class="fa fa-power-off"></i> Logout</a
+                >
+              </li>
             </ul>
-            </div>
-    </nav>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
 <!-- ============================================================== -->
 <!-- End Topbar header -->
